src/objects/Adverse_Event_Review__c.object
<CustomObject>
    <fields>
        <fullName>AER_Comments__c</fullName>
        <label>AER Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AER_Completed_Date__c</fullName>
        <label>AER_Completed_Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AER_Number__c</fullName>
        <label>AER_Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AER_Related_Case__c</fullName>
        <label>AER Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Adverse Event Reviews</relationshipLabel>
        <relationshipName>Adverse_Event_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AER_Status__c</fullName>
        <label>AER Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assesment__c</fullName>
        <label>Assesment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_List__c</fullName>
        <label>Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potentially Serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Serious</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due_Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medwatch__c</fullName>
        <label>Medwatch</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prosar_Case__c</fullName>
        <label>Prosar Case</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Adverse_Event_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synced_With_PQM__c</fullName>
        <label>Synced With PQM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Adverse Event Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_AERs</fullName>
        <columns>NAME</columns>
        <columns>AER_Related_Case__c</columns>
        <columns>AER_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AER_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed AERs</label>
    </listViews>
    <listViews>
        <fullName>In_Progress_AERs</fullName>
        <columns>NAME</columns>
        <columns>AER_Comments__c</columns>
        <columns>Reviewer__c</columns>
        <columns>AER_Related_Case__c</columns>
        <columns>AER_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AER_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress AERs</label>
    </listViews>
    <nameField>
        <label>AER Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adverse Event Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>